testdata/baselines/reference/compiler/cjsModuleExportsNamedDeclarationEmit.errors.txt
/reexport.js(4,12): error TS2749: 'InternalClass' refers to a value, but is being used as a type here. Did you mean 'typeof InternalClass'?
/reexport.js(5,14): error TS2749: 'InternalClass' refers to a value, but is being used as a type here. Did you mean 'typeof InternalClass'?


==== /reexport.js (2 errors) ====
    const { InternalClass } = require("./helper");
    
    /**
     * @param {InternalClass} cls
               ~~~~~~~~~~~~~
!!! error TS2749: 'InternalClass' refers to a value, but is being used as a type here. Did you mean 'typeof InternalClass'?
     * @returns {InternalClass}
                 ~~~~~~~~~~~~~
!!! error TS2749: 'InternalClass' refers to a value, but is being used as a type here. Did you mean 'typeof InternalClass'?
     */
    function wrap(cls) {
        return cls;
    }
    
    exports.wrapped = wrap(new InternalClass("test"));
    
==== /helper.js (0 errors) ====
    class InternalClass {
        /** @param {string} x */
        constructor(x) {
            this.x = x;
        }
    }
    module.exports = { InternalClass };
    
==== /index.js (0 errors) ====
    /** @type {typeof import("./helper").InternalClass} */
    const Cls = require("./helper").InternalClass;
    exports.instance = new Cls("hello");
    